fixed image alignment in modals

--- a/css/style.css
+++ b/css/style.css
@@ -744,6 +744,7 @@ textarea {
 	-webkit-transform: scale(1);
 	transform: scale(1);
 }
+
 /* Portfolio Images
 ---------------------------------- */
 .thumbnail {
@@ -766,8 +767,19 @@ textarea {
   width: 100%;
   height: auto;
 }
+.image-container {
+	height: 600px;
+}
 .img-full {
-	margin: 0 auto;
-	max-height: 500px;
-	max-width: 100%;
+	height: 600px;
+	overflow: hidden;
+	margin: auto;
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+}
+.carousel-inner {
+}
+.carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev {
+    display: block;
+    height: 600px !important;
 }
